--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -7,7 +7,7 @@
   .tabsdemoStaticTabs #tab2-content {
     background-color: #673AB7; }
   .tabsdemoStaticTabs #tab3-content {
-    background-color: #00796B; }
+    background-color: #009688; }
   .tabsdemoStaticTabs .tabpanel-container {
     display: block;
     position: relative;
@@ -17,17 +17,16 @@
     overflow: hidden; }
   .tabsdemoStaticTabs [role="tabpanel"] {
     color: white;
-    width: 100%;
     height: 100%;
-   /*  -webkit-transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s;
-    transition: all cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s;
-    */ position: absolute; }
+  	-webkit-transition: all ease-in-out;
+    transition: all ease-in-out;
+     position: absolute; }
   .tabsdemoStaticTabs [role="tabpanel"].ng-leave.ng-leave-active, .tabsdemoStaticTabs [role="tabpanel"].ng-enter {
-    top: -300px; }
+    opacity:1; }
   .tabsdemoStaticTabs [role="tabpanel"].ng-leave, .tabsdemoStaticTabs [role="tabpanel"].ng-enter.ng-enter-active {
     top: 0; }
   .tabsdemoStaticTabs [role="tabpanel"].ng-leave {
-    z-index: 100; }
+    opacity:0; }
   .tabsdemoStaticTabs .tabpanel-container [role="tabpanel"] {
     padding: 20px; }
   .tabsdemoStaticTabs .after-tabs-area {
