Personalisation View : Change in Size of side navigation, fetching categories

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -74,10 +74,6 @@
 	margin-left: 0px;
 }
 
-.personalisationDiv {
-	margin: 50px;
-}
-
-.checkLabels {
-	display: block;
+#userPreferencesSideNav {
+	width : 40%;
 }
